# sdl_game

./: .gitignore  CMakeLists.txt
assets/: hello.rcss  hello.rml
src/: main.cpp
